feat(doc): #3596.8 add pci ref to some rules
- Added PCI DSS references to R320, R153, R225, R226, R228, R229,
R231, R236, R237, R264, R319, R328, R334, R335, R114, R088, R131,
R139, R140, R141, R142, R143, R332 and R347
- Updated R174, R225, R226, R228, R229, R231, R237, R264, R319,
R328, R334, R335, R114, R088, R131, R139, R140, R141, R142, R143,
R332 and R347 keywords
- Fixed some minor typos
- Adjusted R231 title for clarity


Former-commit-id: 5b9ccd8a9731cfbd68342752d9714a8459824806

--- a/content/pages/findings/security/028/index.adoc
+++ b/content/pages/findings/security/028/index.adoc
@@ -1,5 +1,5 @@
 :slug: findings/028/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from storing credentials in cache memory, recommendations to avoid them and related security requirements.
+:description: This finding presents information about vulnerabilities arising from storing credentials in temporary files or cache memory.
 :keywords: Administrative, Credential, Cache, Memory, Obtain, System
 :findings: yes
 :type: security
@@ -9,7 +9,8 @@
 == Description
 
 The system uses temporary files to store sensitive information.
-Alternatively, deploys sensitive temporary files to the production environment.
+Alternatively, the system deploys sensitive temporary files to the production
+environment.
 
 == Rules
 
