--- a/content/pages/rules/credentials/139/index.adoc
+++ b/content/pages/rules/credentials/139/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/139/
 :category: credentials
 :description: This requirement is related to the importance of defining the minimum length for one-time passwords within the company's system.
-:keywords: Length, Password, OTP, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Length, Password, OTP, ASVS, CWE, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R139. Set minimum OTP length
@@ -47,3 +47,7 @@ V2.3 Authenticator Lifecycle Requirements.(2.3.1)]
 Verify system generated initial passwords or activation codes SHOULD
 be securely randomly generated,
 SHOULD be at least 6 characters long.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
