--- a/content/pages/rules/credentials/140/index.adoc
+++ b/content/pages/rules/credentials/140/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/140/
 :category: credentials
 :description: This requirement establishes the importance of defining a short lifespan for single-use passwords such as access tokens and OTPs.
-:keywords: Password, Lifespan, OTP, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Password, Lifespan, OTP, ASVS, CWE, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R140. Define OTP lifespan
@@ -68,3 +68,7 @@ seeding, and verification.
 . [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.4)]
 Verify that time-based *OTP*s can be used only once within the validity period.
+
+. [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
