--- a/content/pages/rules/credentials/141/index.adoc
+++ b/content/pages/rules/credentials/141/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/141/
 :category: credentials
 :description: This requirement establishes the importance of forcing users to re-authenticate after their account changes.
-:keywords: Re-authentication, Force, Password, Change, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Re-authentication, Force, Password, Change, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R141. Force re-authentication
@@ -37,3 +37,7 @@ V3.7 Defenses Against Session Management Exploits.(3.7.1)]
 Verify the application ensures a valid login session or requires
 re-authentication or secondary verification before allowing any sensitive
 transactions or account modifications.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
