--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/142/
 :category: credentials
 :description: This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
-:keywords: Change, Credentials, Default, Password, System, ASVS, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Change, Credentials, Default, Password, System, ASVS, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R142. Change system default credentials
@@ -96,3 +96,7 @@ transmitting cardholder data,
 change ALL wireless vendor defaults at installation,
 including but not limited to default wireless encryption keys, passwords,
 and *SNMP* community strings.
+
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
