--- a/content/pages/rules/credentials/332/index.adoc
+++ b/content/pages/rules/credentials/332/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/332/
 :category: credentials
 :description: This requirement establishes the importance of checking new passwords against a set of breached passwords.
-:keywords: Breached, Leaked, Password, Account, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Breached, Leaked, Password, Account, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R332. Prevent the use of breached passwords
@@ -57,3 +57,7 @@ or risk-based restrictions such as location, first login on a device,
 recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
 account.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
