--- a/content/pages/rules/credentials/347/index.adoc
+++ b/content/pages/rules/credentials/347/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/347/
 :category: credentials
 :description: This requirement establishes the importance of invalidating previous OTPs when a new one is generated.
-:keywords: Credentials, Validity, OTP, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Credentials, Validity, OTP, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R347. Invalidate previous OTPs
@@ -61,3 +61,7 @@ period.
 . [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V3.2 Session Binding Requirements.(3.2.1)]
 Verify the application generates a new session token on user authentication.
+
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
