--- a/content/pages/rules/authentication/328/index.adoc
+++ b/content/pages/rules/authentication/328/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/328/
 :category: authentication
 :description: This requirement states that multi-factor authentication (MFA) must be enabled and required to access critical systems.
-:keywords: MFA, Authentication, Multi, Factor, ASVS, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: MFA, Authentication, Multi, Factor, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R328. Request MFA for critical systems
@@ -99,3 +99,7 @@ Address common coding vulnerabilities in software-development processes
 including improper access control
 (such as insecure direct object references, failure to restrict URL access,
 directory traversal, and failure to restrict user access to functions).
+
+. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
