--- a/content/pages/rules/authentication/334/index.adoc
+++ b/content/pages/rules/authentication/334/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/334/
 :category: authentication
 :description: This requirement states that password hints and knowledge-based authentication mechanisms must not be present in the system.
-:keywords: Knowledge, Based, Authentication, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Knowledge, Based, Authentication, ASVS, CWE, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R334. Avoid knowledge-based authentication
@@ -45,3 +45,7 @@ temporarily or permanently.
 V2.5 Credential Recovery Requirements.(2.5.2)]
 Verify password hints or knowledge-based authentication
 (so-called "secret questions") are not present.
+
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
