--- a/content/pages/rules/credentials/131/index.adoc
+++ b/content/pages/rules/credentials/131/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/131/
 :category: credentials
 :description: This requirement establishes the importance of managing password change mechanisms to avoid multiple password changes in less than 24 hours.
-:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Passwords, Changing, Attempts, Credentials, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R131. Deny multiple password changing attempts
@@ -41,3 +41,7 @@ Verify forgotten password, and other recovery paths use a secure recovery
 mechanism,
 such as *TOTP* or other soft token, mobile push, or another offline recovery
 mechanism.
+
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
