--- a/content/pages/rules/credentials/143/index.adoc
+++ b/content/pages/rules/credentials/143/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/143/
 :category: credentials
 :description: This requirement establishes that user credentials must be unique for each actor that claims access to the system.
-:keywords: Requirement, Security, System, Credentials, Access, Actor, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, System, Credentials, Access, Actor, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R143. Unique access credentials
@@ -23,3 +23,7 @@ often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users’ identities
 temporarily or permanently.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
