--- a/content/pages/rules/session/027/index.adoc
+++ b/content/pages/rules/session/027/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/027/
 :category: session
 :description: This requirement establishes the importance of allowing temporary lockouts over sessions to avoid brute-force attacks.
-:keywords: Requirement, Security, Session, User, Lockout, Account, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Session, User, Lockout, Account, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R027. Allow session lockout
@@ -30,3 +30,7 @@ often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users’ identities
 temporarily or permanently.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
