--- a/content/pages/rules/session/025/index.adoc
+++ b/content/pages/rules/session/025/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/025/
 :category: session
 :description: This requirement establishes the importance of informing and controlling concurrent sessions to detect user impersonation and identity theft.
-:keywords: Manage, Concurrent, Session, ASVS, CWE, NIST, Rules, Ethical Hacking, Pentesting
+:keywords: Manage, Concurrent, Session, ASVS, CWE, NIST, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R025. Manage concurrent sessions
@@ -83,3 +83,7 @@ V3.2 Session Binding Requirements.(3.2.1)]
 Verify the application generates a new session token on user authentication.
 
 . [[r6]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-10-broken-authentication-and-session-management.667/[[PCI DSS 3.0\] 6.5.10 Broken authentication and session management].
+
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
