--- a/content/pages/rules/session/026/index.adoc
+++ b/content/pages/rules/session/026/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/026/
 :category: session
 :description: This requirement establishes the importance of encrypting and verifying client-side session information.
-:keywords: Requirement, Security, Session, Information, ViewState, OWASP, CWE, Client Side, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Session, Information, ViewState, OWASP, CWE, PCI DSS, Client Side, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R026. Encrypt client-side session information
@@ -28,3 +28,7 @@ often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users’ identities
 temporarily or permanently.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
