--- a/content/pages/rules/session/032/index.adoc
+++ b/content/pages/rules/session/032/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/032/
 :category: session
 :description: This requirement establishes the importance of managing session IDs securely to avoid session hijacking attacks.
-:keywords: Session ID, Leakage, URL, Messages, ASVS, CWE, Rules, Ethical Hacking, Pentesting
+:keywords: Session ID, Leakage, URL, Messages, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R032. Avoid session ID leakages
@@ -79,3 +79,7 @@ data.
 V13.1 Generic Web Service Security Verification Requirements.(13.1.3)]
 Verify *API* **URL**s do not expose sensitive information,
 such as the *API* key, session tokens etc.
+
+. [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+Address common coding vulnerabilities in software-development processes such as
+broken authentication and session management.
