feat(doc): #3596.10 add pci ref to some rules
- Added PCI DSS references to R096, R095, R341, R143, R264,
R229, R035, R034, R114 and R144
- Updated R034 keywords


Former-commit-id: ab2fcef7b165e4638bbf470e9e50715b98ee484f

--- a/content/pages/rules/authentication/264/index.adoc
+++ b/content/pages/rules/authentication/264/index.adoc
@@ -94,3 +94,7 @@ such as a bearer token, are authenticated by the application.
 . [[r11]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.1]
+Assign all users a unique ID before allowing them to access system components
+or cardholder data.
