--- a/content/pages/rules/authorization/114/index.adoc
+++ b/content/pages/rules/authorization/114/index.adoc
@@ -28,3 +28,6 @@ temporarily or permanently.
 . [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.3]
+Immediately revoke access for any terminated users.
