--- a/content/pages/rules/credentials/143/index.adoc
+++ b/content/pages/rules/credentials/143/index.adoc
@@ -27,3 +27,7 @@ temporarily or permanently.
 . [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.1]
+Assign all users a unique ID before allowing them to access system components
+or cardholder data.
