--- a/content/pages/rules/credentials/144/index.adoc
+++ b/content/pages/rules/credentials/144/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/144/
 :category: credentials
 :description: This requirement establishes the importance of purging user accounts periodically in order to avoid information leakages.
-:keywords: Requirement, Security, Credentials, User, Account, Purge, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Credentials, User, Account, Purge, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R144. Remove inactive accounts periodically
@@ -29,3 +29,6 @@ when members leave the group.
 The organization disables accounts of users posing a significant risk
 within [Assignment: organization-defined time period]
 of discovery of the risk.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.4]
+Remove/disable inactive user accounts within 90 days.
