--- a/content/pages/rules/authentication/229/index.adoc
+++ b/content/pages/rules/authentication/229/index.adoc
@@ -82,3 +82,7 @@ and has sufficient logging and monitoring to detect account abuse or breaches.
 . [[r9]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
+
+. [[r10]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.1]
+Assign all users a unique ID before allowing them to access system components
+or cardholder data.
