--- a/content/pages/rules/authorization/034/index.adoc
+++ b/content/pages/rules/authorization/034/index.adoc
@@ -1,21 +1,24 @@
 :slug: rules/034/
 :category: authorization
 :description: This requirement establishes the importance of allowing the system to manage and disable the user accounts through privileged users or system administrators.
-:keywords: Requirement, Security, User, Accounts, Management, Administration, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, User, Accounts, Management, Administration, HIPAA, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R034. Manage user accounts
 
 == Requirement
 
-The system must allow +superusers+
-or system administrators
-to disable user accounts.
+The system must allow *superusers* or system administrators to disable user
+accounts.
 
 == References
 
-. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.308[+HIPAA Security Rules+ 164.308(a)(3)(ii)(A):]
+. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.308[HIPAA Security Rules 164.308(a)(3)(ii)(A):]
 Authorization and/or supervision (Addressable):
 Implement procedures for the authorization and/or supervision
 of workforce members who work with electronic protected health information
 or in locations where it might be accessed.
+
+. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.2]
+Control addition, deletion, and modification of user IDs, credentials,
+and other identifier objects.
